Manifests-canary/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
        version: "v2.0.0"
    spec:
      containers:
      - name: flask-app-v2
        image: IMAGE_URL ## << Estó será reemplazado por tu cloudbuild.yaml cuando se ejecute (ver linea 25)
        ports:
        - containerPort: 8080
